--- a/RMI/src/.project
+++ b/RMI/src/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DEMS_WebService</name>
+	<name>DEMS_RMI</name>
 	<comment></comment>
 	<projects>
 	</projects>
